# ui-audit-pro

./: README.md  SKILL.md  pyproject.toml  requirements.txt
references/: backend-integration-checks.md  consistency-categories.md
scripts/: __init__.py  __main__.py  audit.py  detect_stack.py  install.py  report_generator.py
scripts/adapters/: __init__.py  base.py  nextjs.py  node_express.py  react.py  static_html.py  vue.py
scripts/analyzers/: api_analyzer.py  component_analyzer.py  consistency_checker.py  integration_checker.py  style_analyzer.py
scripts/capture/: dom_extractor.py  network_interceptor.py  screenshot_capture.py
