[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ui-audit-pro"
version = "0.1.0"
description = "Full-stack UI/UX consistency and frontend-backend integration audit for any web application"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Pranjal Upadhyay"}
]
keywords = ["ui", "ux", "audit", "consistency", "frontend", "backend", "integration", "web"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ui-audit-pro = "scripts.audit:main"
ui-audit-pro-install = "scripts.install:main"

[project.urls]
Homepage = "https://github.com/Pranjal-Upadhyay/ui-audit-pro"
Repository = "https://github.com/Pranjal-Upadhyay/ui-audit-pro"
Issues = "https://github.com/Pranjal-Upadhyay/ui-audit-pro/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
